parser.output
   0  $accept : %entry% $end

   1  prog : expr EOF

   2  expr : INT
   3       | STRING
   4       | FLOAT
   5       | expr PLUS expr
   6       | expr MINUS expr
   7       | expr MULT expr
   8       | expr DIV expr
   9       | expr MOD expr
  10       | TRUE
  11       | FALSE
  12       | expr AND expr
  13       | expr OR expr
  14       | NOT expr
  15       | IF expr THEN expr ELSE expr
  16       | IDENT
  17       | IDENT ASSIGN expr
  18       | LPAREN expr RPAREN
  19       | IDENT LPAREN args RPAREN
  20       | LBRACE expr_list_semicolon RBRACE
  21       | expr LT expr
  22       | expr GT expr
  23       | expr LE expr
  24       | expr GE expr
  25       | expr NE expr
  26       | expr EQUAL expr
  27       | WHILE expr LBRACE expr_list_semicolon RBRACE
  28       | FOR IDENT ASSIGN INT DOT_3 INT LBRACE expr_list_semicolon RBRACE
  29       | DIM_1_M LPAREN expr RPAREN
  30       | DIM_2_M LPAREN expr RPAREN
  31       | DIM_V LPAREN expr RPAREN
  32       | VECTOR LBRACKET expr_list_comma RBRACKET
  33       | MATRIX LBRACKET mat_row_list RBRACKET
  34       | TRANSPOSE LPAREN expr RPAREN
  35       | DETERMINANT LPAREN expr RPAREN

  36  args : expr_list_comma expr
  37       | expr COMMA args

  38  expr_list_semicolon : expr SEMICOLON expr_list_semicolon
  39                      | expr SEMICOLON

  40  expr_list_comma : expr COMMA expr_list_comma
  41                  | expr COMMA expr

  42  mat_row_list : expr_list_semicolon
  43               | expr_list_semicolon SEMICOLON mat_row_list

  44  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (44)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 22
	prog  goto 23


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : INT .  (2)

	.  reduce 2


state 4
	expr : IF . expr THEN expr ELSE expr  (15)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 24


state 5
	expr : FOR . IDENT ASSIGN INT DOT_3 INT LBRACE expr_list_semicolon RBRACE  (28)

	IDENT  shift 25
	.  error


state 6
	expr : WHILE . expr LBRACE expr_list_semicolon RBRACE  (27)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 26


state 7
	expr : TRUE .  (10)

	.  reduce 10


state 8
	expr : FALSE .  (11)

	.  reduce 11


state 9
	expr : VECTOR . LBRACKET expr_list_comma RBRACKET  (32)

	LBRACKET  shift 27
	.  error


state 10
	expr : MATRIX . LBRACKET mat_row_list RBRACKET  (33)

	LBRACKET  shift 28
	.  error


state 11
	expr : TRANSPOSE . LPAREN expr RPAREN  (34)

	LPAREN  shift 29
	.  error


state 12
	expr : DETERMINANT . LPAREN expr RPAREN  (35)

	LPAREN  shift 30
	.  error


state 13
	expr : DIM_V . LPAREN expr RPAREN  (31)

	LPAREN  shift 31
	.  error


state 14
	expr : DIM_1_M . LPAREN expr RPAREN  (29)

	LPAREN  shift 32
	.  error


state 15
	expr : DIM_2_M . LPAREN expr RPAREN  (30)

	LPAREN  shift 33
	.  error


state 16
	expr : NOT . expr  (14)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 34


state 17
	expr : LPAREN . expr RPAREN  (18)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 35


state 18
	expr : LBRACE . expr_list_semicolon RBRACE  (20)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 36
	expr_list_semicolon  goto 37


state 19
	expr : FLOAT .  (4)

	.  reduce 4


state 20
	expr : STRING .  (3)

	.  reduce 3


21: shift/reduce conflict (shift 39, reduce 16) on LPAREN
state 21
	expr : IDENT .  (16)
	expr : IDENT . ASSIGN expr  (17)
	expr : IDENT . LPAREN args RPAREN  (19)

	ASSIGN  shift 38
	LPAREN  shift 39
	INT  reduce 16
	IF  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	FOR  reduce 16
	WHILE  reduce 16
	TRUE  reduce 16
	FALSE  reduce 16
	VECTOR  reduce 16
	MATRIX  reduce 16
	TRANSPOSE  reduce 16
	DETERMINANT  reduce 16
	DIM_V  reduce 16
	DIM_1_M  reduce 16
	DIM_2_M  reduce 16
	EQUAL  reduce 16
	LT  reduce 16
	GT  reduce 16
	LE  reduce 16
	GE  reduce 16
	NE  reduce 16
	NOT  reduce 16
	AND  reduce 16
	OR  reduce 16
	RPAREN  reduce 16
	RBRACKET  reduce 16
	LBRACE  reduce 16
	COMMA  reduce 16
	SEMICOLON  reduce 16
	EOF  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	MULT  reduce 16
	DIV  reduce 16
	MOD  reduce 16
	FLOAT  reduce 16
	STRING  reduce 16
	IDENT  reduce 16


state 22
	prog : expr . EOF  (1)
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	EOF  shift 48
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 23
	%entry% : '\001' prog .  (44)

	.  reduce 44


state 24
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : IF expr . THEN expr ELSE expr  (15)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)

	THEN  shift 54
	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 25
	expr : FOR IDENT . ASSIGN INT DOT_3 INT LBRACE expr_list_semicolon RBRACE  (28)

	ASSIGN  shift 55
	.  error


state 26
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)
	expr : WHILE expr . LBRACE expr_list_semicolon RBRACE  (27)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	LBRACE  shift 56
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 27
	expr : VECTOR LBRACKET . expr_list_comma RBRACKET  (32)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 57
	expr_list_comma  goto 58


state 28
	expr : MATRIX LBRACKET . mat_row_list RBRACKET  (33)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 36
	expr_list_semicolon  goto 59
	mat_row_list  goto 60


state 29
	expr : TRANSPOSE LPAREN . expr RPAREN  (34)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 61


state 30
	expr : DETERMINANT LPAREN . expr RPAREN  (35)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 62


state 31
	expr : DIM_V LPAREN . expr RPAREN  (31)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 63


state 32
	expr : DIM_1_M LPAREN . expr RPAREN  (29)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 64


state 33
	expr : DIM_2_M LPAREN . expr RPAREN  (30)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 65


state 34
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : NOT expr .  (14)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	INT  reduce 14
	IF  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	FOR  reduce 14
	WHILE  reduce 14
	TRUE  reduce 14
	FALSE  reduce 14
	VECTOR  reduce 14
	MATRIX  reduce 14
	TRANSPOSE  reduce 14
	DETERMINANT  reduce 14
	DIM_V  reduce 14
	DIM_1_M  reduce 14
	DIM_2_M  reduce 14
	NOT  reduce 14
	AND  reduce 14
	OR  reduce 14
	LPAREN  reduce 14
	RPAREN  reduce 14
	RBRACKET  reduce 14
	LBRACE  reduce 14
	COMMA  reduce 14
	SEMICOLON  reduce 14
	EOF  reduce 14
	FLOAT  reduce 14
	STRING  reduce 14
	IDENT  reduce 14


state 35
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : LPAREN expr . RPAREN  (18)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  shift 66
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 36
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)
	expr_list_semicolon : expr . SEMICOLON expr_list_semicolon  (38)
	expr_list_semicolon : expr . SEMICOLON  (39)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	SEMICOLON  shift 67
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 37
	expr : LBRACE expr_list_semicolon . RBRACE  (20)

	RBRACE  shift 68
	.  error


state 38
	expr : IDENT ASSIGN . expr  (17)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 69


state 39
	expr : IDENT LPAREN . args RPAREN  (19)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	args  goto 70
	expr  goto 71
	expr_list_comma  goto 72


state 40
	expr : expr EQUAL . expr  (26)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 73


state 41
	expr : expr LT . expr  (21)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 74


state 42
	expr : expr GT . expr  (22)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 75


state 43
	expr : expr LE . expr  (23)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 76


state 44
	expr : expr GE . expr  (24)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 77


state 45
	expr : expr NE . expr  (25)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 78


state 46
	expr : expr AND . expr  (12)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 79


state 47
	expr : expr OR . expr  (13)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 80


state 48
	prog : expr EOF .  (1)

	.  reduce 1


state 49
	expr : expr PLUS . expr  (5)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 81


state 50
	expr : expr MINUS . expr  (6)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 82


state 51
	expr : expr MULT . expr  (7)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 83


state 52
	expr : expr DIV . expr  (8)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 84


state 53
	expr : expr MOD . expr  (9)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 85


state 54
	expr : IF expr THEN . expr ELSE expr  (15)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 86


state 55
	expr : FOR IDENT ASSIGN . INT DOT_3 INT LBRACE expr_list_semicolon RBRACE  (28)

	INT  shift 87
	.  error


state 56
	expr : WHILE expr LBRACE . expr_list_semicolon RBRACE  (27)

	INT  shift 3
	IF  shift 4
	FOR  shift 5
	WHILE  shift 6
	TRUE  shift 7
	FALSE  shift 8
	VECTOR  shift 9
	MATRIX  shift 10
	TRANSPOSE  shift 11
	DETERMINANT  shift 12
	DIM_V  shift 13
	DIM_1_M  shift 14
	DIM_2_M  shift 15
	NOT  shift 16
	LPAREN  shift 17
	LBRACE  shift 18
	FLOAT  shift 19
	STRING  shift 20
	IDENT  shift 21
	.  error

	expr  goto 36
	expr_list_semicolon  goto 88


state 57
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)
	expr_list_comma : expr . COMMA expr_list_comma  (40)
	expr_list_comma : expr . COMMA expr  (41)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	COMMA  shift 89
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 58
	expr : VECTOR LBRACKET expr_list_comma . RBRACKET  (32)

	RBRACKET  shift 90
	.  error


state 59
	mat_row_list : expr_list_semicolon .  (42)
	mat_row_list : expr_list_semicolon . SEMICOLON mat_row_list  (43)

	SEMICOLON  shift 91
	RBRACKET  reduce 42


state 60
	expr : MATRIX LBRACKET mat_row_list . RBRACKET  (33)

	RBRACKET  shift 92
	.  error


state 61
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)
	expr : TRANSPOSE LPAREN expr . RPAREN  (34)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  shift 93
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 62
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)
	expr : DETERMINANT LPAREN expr . RPAREN  (35)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  shift 94
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error


state 63
	expr : expr . PLUS expr  (5)
	expr : expr . MINUS expr  (6)
	expr : expr . MULT expr  (7)
	expr : expr . DIV expr  (8)
	expr : expr . MOD expr  (9)
	expr : expr . AND expr  (12)
	expr : expr . OR expr  (13)
	expr : expr . LT expr  (21)
	expr : expr . GT expr  (22)
	expr : expr . LE expr  (23)
	expr : expr . GE expr  (24)
	expr : expr . NE expr  (25)
	expr : expr . EQUAL expr  (26)
	expr : DIM_V LPAREN expr . RPAREN  (31)

	EQUAL  shift 40
	LT  shift 41
	GT  shift 42
	LE  shift 43
	GE  shift 44
	NE  shift 45
	AND  shift 46
	OR  shift 47
	RPAREN  shift 95
	PLUS  shift 49
	MINUS  shift 50
	MULT  shift 51
	DIV  shift 52
	MOD  shift 53
	.  error

